# LocalAI

backend/rust/: Cargo.toml  README.md
backend/rust/backend-burn/: Cargo.toml
backend/rust/backend-burn/src/: main.rs  server.rs
backend/rust/backend-burn/src/models/: llama.rs  mhsa.rs  mlp.rs  mod.rs  rdab.rs  rmsnorm.rs  rope.rs  silu.rs
backend/rust/backend-burn/src/pkg/: convert.rs  loader.rs  mod.rs  tokenizer.rs
backend/rust/backend-burn/src/utils/: utils.rs
backend/rust/models/: Cargo.toml
backend/rust/models/src/: lib.rs
backend/rust/models/src/mnist/: mnist.rs  mod.rs
backend/rust/models/src/whisper/: audio_encoder.rs  mlp.rs  mod.rs  multi_head_cross_attention.rs  multi_head_self_attention.rs  residual_decoder_attention.rs  residual_encoder_attention_block.rs  text_decoder_config.rs  utils.rs  whisper.rs
